package com.maquina3djuegos.factory;

import com.maquina3djuegos.model.Juego;

public interface JuegoFactory {

    Juego crearJuego();
}
